# ShoutBot

./: .env.default  .gitignore  .gitmodules  README.md  config.json  config_override.json.default  docker-compose.yml  license  main.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  other.md
docker/: Dockerfile
src/: bbcodeParser.py  bonfire.py  cog.py  config.py  parser.py  tiplanet.py
src/cogs/: admin.py  chat.py  latex.py
src/libs/: setInterval.py
tests/: mock.py
