[tool.poetry]
name = "shoutbot"
version = "0.1.0"
description = ""
authors = ["Evann DREUMONT <53308142+LeGmask@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
bbcode = "^1.1.0"
markdown-it-py = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
